# iceman-predictor

./: .env.example  README.md  main.py  pyproject.toml  saved_artist_lyrics_drake_1_songs.json
None/: Extra Special.txt  Search & Rescue.txt  What Did I Miss?.txt
plot/: graphs.py  parse.py
reports/: term_mentions.json
reports/by_album/: $ome $exy $ongs 4 U.json  100 GIGS.json  2021 GRAMMY® Nominees.json  Beam Me Up Scotty.json  Best Night of My Life.json  Care Package.json  Certified Lover Boy.json  Comeback Season.json  DIAMANTE.json  Dark Lane Demo Tapes.json  EDNA (Deluxe).json  Feed The Streets 12.json  For All The Dogs_ Scary Hours Edition.json  Harder Than Ever.json  Heartbreak Drake.json  Her Loss.json  Honestly, Nevermind.json  Hook vs. Bridge.json  If You’re Reading This It’s Too Late.json  Lil Boat 3.5.json  Link Up TV Freestyles.json  March Madness.json  Memorial Day Weekend 2016 Soundtrack.json  More Life.json  None.json  Nothing Was the Same.json  OVO Sound Radio Tracklists - Season 1 & 2.json  Over It (Complete Set).json  Rise of an Empire.json  Room for Improvement.json  Scary Hours 2.json  Scorpion.json  Smokers Choice.json  So Far Gone.json  Take Care.json  Thank Me Later.json  The Best in the World Pack.json  The Leak 4.json  Tim Westwood I Freestyles.json  Top Boy Season 3 (Official OVO Playlist).json  (+5 more)
reports/graphs/: album_song_percent_by_release_date.html  album_term_binary_by_release_date.html
scraper/: scraper.py
songs/album/$ome $exy $ongs 4 U/: BRIAN STEEL.txt  CELIBACY.txt  CN TOWER.txt  CRYING IN CHANEL.txt  DIE TRYING.txt  GREEDY.txt  (+15 more)
(+369 files in other folders)
