[project]
name = "iceman-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "ruff>=0.15.13",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
